<resources>
    <string name="app_name">NextDestination</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="dropped_pin">Dropped Pin</string>

    <string name="get_location">GO!</string>
    <string name="android_image">Android Image</string>
    <string name="textview_hint">Press the GO button to get your new adventure destination</string>
    <string name="location_permission_denied">Location Permission Denied</string>
    <string name="location_text">"Latitude: %1$.4f \n Longitude: %2$.4f \n Timestamp: %3$tr"</string>
    <string name="no_location">No Location Found</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid coordinates were supplied to the Geocoder</string>
    <string name="no_address_found">No Addresses Found</string>
    <string name="address_text">"Address: %1$s \n Timestamp: %2$tr"</string>
    <string name="loading">Loading</string>
    <string name="button_view_map">View Destination On Map</string>
    <string name="CurrentLocationlbl">Current Location</string>
    <string name="NewDestinationlbl">New Destination</string>


    <string name="auth">Sign In With Fingerprint</string>
    <string name="widget_open_app">Get New Destination</string>
    <string name="widget_destination_lbl">Your New Destination</string>

</resources>
